@@ -16,12 +16,11 @@
 package com.android.tools.idea.diagnostics.util;
 
 import com.google.common.collect.ComparisonChain;
+import com.google.common.collect.Lists;
 import com.google.common.collect.Ordering;
 import java.lang.management.ThreadInfo;
-import java.util.Arrays;
-import java.util.Comparator;
-import java.util.SortedMap;
-import java.util.TreeMap;
+import java.util.*;
+import java.util.function.Predicate;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
@@ -37,14 +36,30 @@ public class FrameInfo {
       "java.util.concurrent.ThreadPoolExecutor.getTask",
       "java.util.concurrent.SynchronousQueue.poll",
       "java.util.concurrent.SynchronousQueue$TransferStack.transfer",
-      "java.util.concurrent.SynchronousQueue$TransferStack.awaitFulfill",
       "java.util.concurrent.locks.LockSupport.parkNanos",
-      "sun.misc.Unsafe.park"
+      "jdk.internal.misc.Unsafe.park",
     }, {
     "java.util.concurrent.ForkJoinWorkerThread.run",
     "java.util.concurrent.ForkJoinPool.runWorker",
     "java.util.concurrent.ForkJoinPool.awaitWork",
-    "sun.misc.Unsafe.park"
+    "java.util.concurrent.locks.LockSupport.park",
+    "jdk.internal.misc.Unsafe.park"
+  }, {
+    "java.util.concurrent.ForkJoinWorkerThread.run",
+    "java.util.concurrent.ForkJoinPool.runWorker",
+    "java.util.concurrent.ForkJoinPool.awaitWork",
+    "java.util.concurrent.locks.LockSupport.parkUntil",
+    "jdk.internal.misc.Unsafe.park",
+  }, {
+    "java.lang.Thread.run",
+    "java.util.concurrent.ThreadPoolExecutor$Worker.run",
+    "java.util.concurrent.ThreadPoolExecutor.runWorker",
+    "java.util.concurrent.ThreadPoolExecutor.getTask",
+    "java.util.concurrent.ScheduledThreadPoolExecutor$DelayedWorkQueue.take",
+    "java.util.concurrent.ScheduledThreadPoolExecutor$DelayedWorkQueue.take",
+    "java.util.concurrent.locks.AbstractQueuedSynchronizer$ConditionObject.awaitNanos",
+    "java.util.concurrent.locks.LockSupport.parkNanos",
+    "jdk.internal.misc.Unsafe.park"
   }, {
     "java.lang.Thread.run",
     "java.util.concurrent.ThreadPoolExecutor$Worker.run",
@@ -55,6 +70,32 @@ public class FrameInfo {
     "java.util.concurrent.locks.AbstractQueuedSynchronizer$ConditionObject.await",
     "java.util.concurrent.locks.LockSupport.park",
     "sun.misc.Unsafe.park"
+  }, {
+    "java.lang.Thread.run",
+    "java.util.concurrent.Executors$PrivilegedThreadFactory$1.run",
+    "java.security.AccessController.doPrivileged",
+    "java.security.AccessController.executePrivileged",
+    "java.util.concurrent.Executors$PrivilegedThreadFactory$1$1.run",
+    "java.util.concurrent.Executors$PrivilegedThreadFactory$1$1.run",
+    "java.util.concurrent.ThreadPoolExecutor$Worker.run",
+    "java.util.concurrent.ThreadPoolExecutor.runWorker",
+    "java.util.concurrent.ThreadPoolExecutor.getTask",
+    "java.util.concurrent.SynchronousQueue.poll",
+    "java.util.concurrent.SynchronousQueue$TransferStack.transfer",
+    "java.util.concurrent.locks.LockSupport.parkNanos",
+    "jdk.internal.misc.Unsafe.park"
+  }, {
+    "kotlinx.coroutines.scheduling.CoroutineScheduler$Worker.run",
+    "kotlinx.coroutines.scheduling.CoroutineScheduler$Worker.runWorker",
+    "kotlinx.coroutines.scheduling.CoroutineScheduler$Worker.tryPark",
+    "kotlinx.coroutines.scheduling.CoroutineScheduler$Worker.park",
+    "java.util.concurrent.locks.LockSupport.parkNanos",
+    "jdk.internal.misc.Unsafe.park"
+  }, {
+    "kotlinx.coroutines.scheduling.CoroutineScheduler$Worker.run",
+    "kotlinx.coroutines.scheduling.CoroutineScheduler$Worker.runWorker",
+    "java.util.concurrent.locks.LockSupport.parkNanos",
+    "jdk.internal.misc.Unsafe.park"
   }
   };
   private static final boolean INCLUDE_SOURCE_INFO_IN_REPORT = true;
@@ -97,6 +138,8 @@ public class FrameInfo {
   }
 
   private long myTimeSpent;
+  @Nullable
+  private List<String> leafInfo = null;
 
   FrameInfo(@Nullable StackTraceElement element) {
     myChildren = new TreeMap<>(STACK_TRACE_ELEMENT_COMPARATOR);
@@ -115,13 +158,17 @@ public class FrameInfo {
   }
 
   public void addThreadInfo(@NotNull ThreadInfo ti, long timeSpent) {
+    addThreadInfo(ti, timeSpent, null);
+  }
+
+  public void addThreadInfo(@NotNull ThreadInfo ti, long timeSpent, @Nullable final String leafInfo) {
     if (isIdleThread(ti)) {
       return;
     }
-    addStack(ti.getStackTrace(), timeSpent);
+    addStack(ti.getStackTrace(), timeSpent, leafInfo);
   }
 
-  public void addStack(@NotNull StackTraceElement[] stackTrace, long timeSpent) {
+  public void addStack(@NotNull StackTraceElement[] stackTrace, long timeSpent, @Nullable final String leafInfo) {
     FrameInfo currentFrameInfo = this;
     int index = stackTrace.length - 1;
     while (index >= 0) {
@@ -134,6 +181,12 @@ public class FrameInfo {
       }
       currentFrameInfo = fi;
       index--;
+    }
+    if (leafInfo != null) {
+      if (currentFrameInfo.leafInfo == null) {
+        currentFrameInfo.leafInfo = Lists.newArrayList();
+      }
+      currentFrameInfo.leafInfo.add(leafInfo);
     }
     currentFrameInfo.myTimeSpent += timeSpent;
   }
@@ -156,6 +209,9 @@ public class FrameInfo {
     appendStackTraceForCurrentFrame(sb);
     sb.append(" [").append(myTimeSpent).append("ms]");
     sb.append('\n');
+    if (leafInfo != null) {
+      sb.append(indentString).append("{").append(String.join(";", leafInfo)).append("}").append('\n');
+    }
 
     FrameInfo[] childFrames = myChildren.values().toArray(EMPTY_FRAME_INFOS);
     Arrays.sort(childFrames, FRAME_INFO_COMPARATOR);
@@ -184,6 +240,38 @@ public class FrameInfo {
         sb.append(myStackTraceElement.isNativeMethod() ? "(Native Method)" : "");
       }
     }
+  }
+
+  boolean exists(Predicate<StackTraceElement> predicate) {
+    Queue<FrameInfo> queue = new ArrayDeque<>();
+    queue.add(this);
+    while (!queue.isEmpty()) {
+      FrameInfo info = queue.remove();
+      queue.addAll(info.myChildren.values());
+      StackTraceElement stackTraceElement = info.myStackTraceElement;
+      if (stackTraceElement != null && predicate.test(stackTraceElement)) {
+        return true;
+      }
+    }
+    return false;
+  }
+
+  int computeMaxDepth() {
+    int depth = 0;
+    Queue<FrameInfo> queue = new ArrayDeque<>();
+    Queue<FrameInfo> queueNextLevel = new ArrayDeque<>();
+    queue.add(this);
+    while (!queue.isEmpty()) {
+      depth++;
+      while (!queue.isEmpty()) {
+        FrameInfo info = queue.remove();
+        queueNextLevel.addAll(info.myChildren.values());
+      }
+      Queue<FrameInfo> tmp = queue;
+      queue = queueNextLevel;
+      queueNextLevel = tmp;
+    }
+    return depth;
   }
 
   private static boolean isIdleThread(ThreadInfo ti) {
